Apply ruff formatting to all Python files
Run ruff format on the entire codebase to ensure consistent code
formatting across all Python files and notebooks.

--- a/docs/user_guide/evaluation_tutorial.ipynb
+++ b/docs/user_guide/evaluation_tutorial.ipynb
@@ -359,7 +359,9 @@
     ")\n",
     "\n",
     "print(f\"Loaded impeller with {len(imp_a.points)} performance points\")\n",
-    "print(f\"Speed range: {min(p.speed.magnitude for p in imp_a.points):.0f} - {max(p.speed.magnitude for p in imp_a.points):.0f} RPM\")"
+    "print(\n",
+    "    f\"Speed range: {min(p.speed.magnitude for p in imp_a.points):.0f} - {max(p.speed.magnitude for p in imp_a.points):.0f} RPM\"\n",
+    ")"
    ]
   },
   {
@@ -399,7 +401,7 @@
           4.576954980842912,
           4.63761877394636,
           4.698282567049809,
-          4.7589463601532564,
+          4.758946360153256,
           4.819610153256705,
           4.880273946360154,
           4.940937739463601,
@@ -442,15 +444,15 @@
           131755.97857368397,
           130266.4684194036,
           128619.73063917983,
-          126803.05235387615,
+          126803.05235387616,
           124803.72068435582,
-          122609.02275148229,
-          120206.24567611887,
+          122609.02275148228,
+          120206.24567611888,
           117582.67657912897,
           114725.60258137598,
-          111622.31080372317,
+          111622.31080372316,
           108260.08836703398,
-          104626.22239217185,
+          104626.22239217184,
           100708
          ]
         },
@@ -517,12 +519,12 @@
           158534.4345721849,
           155583.0819389813,
           152268.9391203641,
-          148566.96168213733,
+          148566.9616821373,
           144452.10519010498,
           139899.325210071,
           134883.57730783956,
           129379.81704921449,
-          123362.99999999999
+          123363.0
          ]
         },
         {
@@ -1428,15 +1430,15 @@
     "    data=df,\n",
     "    operation_fluid=operation_fluid,\n",
     "    data_units={\n",
-    "        \"ps\": \"bar\",        # Suction pressure\n",
-    "        \"Ts\": \"degC\",       # Suction temperature\n",
-    "        \"pd\": \"bar\",        # Discharge pressure\n",
-    "        \"Td\": \"degC\",       # Discharge temperature\n",
-    "        \"flow_v\": \"m³/s\",   # Volumetric flow rate\n",
-    "        \"speed\": \"RPM\",     # Rotational speed\n",
+    "        \"ps\": \"bar\",  # Suction pressure\n",
+    "        \"Ts\": \"degC\",  # Suction temperature\n",
+    "        \"pd\": \"bar\",  # Discharge pressure\n",
+    "        \"Td\": \"degC\",  # Discharge temperature\n",
+    "        \"flow_v\": \"m³/s\",  # Volumetric flow rate\n",
+    "        \"speed\": \"RPM\",  # Rotational speed\n",
     "    },\n",
-    "    impellers=[imp_a],      # Reference impeller(s)\n",
-    "    n_clusters=2,           # Number of clusters for data analysis\n",
+    "    impellers=[imp_a],  # Reference impeller(s)\n",
+    "    n_clusters=2,  # Number of clusters for data analysis\n",
     ")\n",
     "\n",
     "print(f\"Evaluation created with {len(evaluation.df)} data points\")\n",
@@ -1630,10 +1632,12 @@
    ],
    "source": [
     "# Analyze performance by cluster\n",
-    "if 'cluster' in evaluation.df.columns:\n",
-    "    cluster_analysis = evaluation.df.groupby('cluster')['delta_eff'].agg(['count', 'mean', 'std'])\n",
-    "    cluster_analysis.columns = ['Count', 'Mean Δeff (%)', 'Std Δeff (%)']\n",
-    "    \n",
+    "if \"cluster\" in evaluation.df.columns:\n",
+    "    cluster_analysis = evaluation.df.groupby(\"cluster\")[\"delta_eff\"].agg(\n",
+    "        [\"count\", \"mean\", \"std\"]\n",
+    "    )\n",
+    "    cluster_analysis.columns = [\"Count\", \"Mean Δeff (%)\", \"Std Δeff (%)\"]\n",
+    "\n",
     "    print(\"Performance by cluster:\")\n",
     "    print(cluster_analysis.round(2))\n",
     "else:\n",
@@ -2611,14 +2615,14 @@
     "        \"Ts\": \"degC\",\n",
     "        \"pd\": \"bar\",\n",
     "        \"Td\": \"degC\",\n",
-    "        \"delta_p\": \"mmH2O\",        # Differential pressure across orifice\n",
-    "        \"p_downstream\": \"bar\",     # Downstream pressure\n",
+    "        \"delta_p\": \"mmH2O\",  # Differential pressure across orifice\n",
+    "        \"p_downstream\": \"bar\",  # Downstream pressure\n",
     "        \"speed\": \"RPM\",\n",
     "    },\n",
     "    impellers=[imp_a],\n",
-    "    D=Q_(0.590550, \"m\"),           # Pipe diameter\n",
-    "    d=Q_(0.366130, \"m\"),           # Orifice diameter\n",
-    "    tappings=\"flange\",             # Pressure tapping type\n",
+    "    D=Q_(0.590550, \"m\"),  # Pipe diameter\n",
+    "    d=Q_(0.366130, \"m\"),  # Orifice diameter\n",
+    "    tappings=\"flange\",  # Pressure tapping type\n",
     "    n_clusters=2,\n",
     ")\n",
     "\n",
@@ -2653,7 +2657,7 @@
     "import os\n",
     "\n",
     "# Save evaluation to file\n",
-    "with NamedTemporaryFile(suffix='.ccp_eval', delete=False) as tmp_file:\n",
+    "with NamedTemporaryFile(suffix=\".ccp_eval\", delete=False) as tmp_file:\n",
     "    tmp_path = tmp_file.name\n",
     "\n",
     "evaluation.save(tmp_path)\n",
@@ -2774,7 +2778,7 @@
     "# Calculate points for a subset of data\n",
     "subset_results = evaluation_manual.calculate_points(\n",
     "    df,\n",
-    "    drop_invalid_values=True  # Remove invalid points\n",
+    "    drop_invalid_values=True,  # Remove invalid points\n",
     ")\n",
     "\n",
     "print(f\"Manual calculation: {len(subset_results)} valid points\")\n",
