--- a/docs/user_guide/tutorial.ipynb
+++ b/docs/user_guide/tutorial.ipynb
@@ -3193,10 +3193,10 @@
          ],
          "y": [
           0.007794715483314352,
-          0.009417687974661719,
-          0.011580835568125145,
+          0.00941768797466172,
+          0.011580835568125144,
           0.014274602747325603,
-          0.015592285633715331
+          0.015592285633715333
          ]
         }
        ],
@@ -3969,7 +3969,7 @@
         "xaxis": {
          "range": [
           10489.06,
-          27229.739999999998
+          27229.74
          ],
          "title": {
           "text": "Volume Flow (m<sup>3</sup>/h)"
@@ -4141,10 +4141,10 @@
          ],
          "y": [
           0.007794715483314352,
-          0.009417687974661719,
-          0.011580835568125145,
+          0.00941768797466172,
+          0.011580835568125144,
           0.014274602747325603,
-          0.015592285633715331
+          0.015592285633715333
          ]
         }
        ],
@@ -4917,7 +4917,7 @@
         "xaxis": {
          "range": [
           10489.06,
-          27229.739999999998
+          27229.74
          ],
          "title": {
           "text": "Volume Flow (m<sup>3</sup>/h)"
@@ -4961,11 +4961,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_fluid = {\n",
-    "    \"co2\": 0.7,\n",
-    "    \"n2\": 0.3\n",
-    "}\n",
-    "new_suc = ccp.State(p=Q_(30, 'bar'), T=Q_(40, 'degC'), fluid=new_fluid)\n",
+    "new_fluid = {\"co2\": 0.7, \"n2\": 0.3}\n",
+    "new_suc = ccp.State(p=Q_(30, \"bar\"), T=Q_(40, \"degC\"), fluid=new_fluid)\n",
     "\n",
     "imp_conv = ccp.Impeller.convert_from(imp, suc=new_suc)"
    ]
@@ -5086,8 +5083,8 @@
          ],
          "y": [
           6956524.441695037,
-          9052537.539311513,
-          12152879.375129143,
+          9052537.539311511,
+          12152879.375129145,
           16466547.166807748,
           18728719.16390369
          ]
@@ -7030,7 +7027,7 @@
         {
          "customdata": [
           [
-           0.9990505106791883,
+           0.9990505106791884,
            1,
            0.6979582978392525,
            3234586.5298950695,
@@ -7146,7 +7143,7 @@
         {
          "customdata": [
           [
-           1.0016756795508939,
+           1.001675679550894,
            1,
            0.6979582978392525,
            3234586.5298950695,
@@ -7384,7 +7381,7 @@
          "showlegend": false,
          "type": "scatter",
          "x": [
-          3.8381587261579675
+          3.838158726157967
          ],
          "y": [
           115610.43182704962
@@ -7393,7 +7390,7 @@
         {
          "customdata": [
           [
-           0.9947316947058649,
+           0.9947316947058648,
            1,
            0.7976521378241384,
            3696603.176057065,
@@ -7503,13 +7500,13 @@
           4.351864831060833
          ],
          "y": [
-          110913.79808448853
+          110913.79808448852
          ]
         },
         {
          "customdata": [
           [
-           1.0000211220443367,
+           1.000021122044337,
            1,
            0.7976521378241384,
            3696603.176057065,
@@ -7561,13 +7558,13 @@
           4.6087178835122655
          ],
          "y": [
-          107046.91386370157
+          107046.91386370156
          ]
         },
         {
          "customdata": [
           [
-           1.0025159294392205,
+           1.0025159294392203,
            1,
            0.7976521378241384,
            3696603.176057065,
@@ -7683,7 +7680,7 @@
         {
          "customdata": [
           [
-           1.0051633609406623,
+           1.0051633609406625,
            1,
            0.7976521378241384,
            3696603.176057065,
@@ -7772,7 +7769,7 @@
            ],
            [
             0.8004875183049979,
-            0.9207674871475107,
+            0.9207674871475108,
             true
            ],
            [
@@ -7830,7 +7827,7 @@
            ],
            [
             0.8004875183049979,
-            0.9207674871475107,
+            0.9207674871475108,
             true
            ],
            [
@@ -7888,7 +7885,7 @@
            ],
            [
             0.8004875183049979,
-            0.9207674871475107,
+            0.9207674871475108,
             true
            ],
            [
@@ -7930,7 +7927,7 @@
         {
          "customdata": [
           [
-           0.9985685647986985,
+           0.9985685647986984,
            1,
            0.8973459778090244,
            4158619.822219061,
@@ -7946,7 +7943,7 @@
            ],
            [
             0.8004875183049979,
-            0.9207674871475107,
+            0.9207674871475108,
             true
            ],
            [
@@ -8004,7 +8001,7 @@
            ],
            [
             0.8004875183049979,
-            0.9207674871475107,
+            0.9207674871475108,
             true
            ],
            [
@@ -8062,7 +8059,7 @@
            ],
            [
             0.8004875183049979,
-            0.9207674871475107,
+            0.9207674871475108,
             true
            ],
            [
@@ -8104,7 +8101,7 @@
         {
          "customdata": [
           [
-           1.0113139365308235,
+           1.0113139365308237,
            1,
            0.8973459778090244,
            4158619.822219061,
@@ -8120,7 +8117,7 @@
            ],
            [
             0.8004875183049979,
-            0.9207674871475107,
+            0.9207674871475108,
             true
            ],
            [
@@ -8294,7 +8291,7 @@
         {
          "customdata": [
           [
-           0.9924885112734221,
+           0.992488511273422,
            1,
            0.9970398177939102,
            4620636.468381056,
@@ -8602,7 +8599,7 @@
           [
            0.983478462571242,
            1,
-           1.0468360288138279,
+           1.046836028813828,
            4851409.788081503,
            [
             0.95,
@@ -8620,7 +8617,7 @@
             false
            ],
            [
-            61890.543178146996,
+            61890.54317814699,
             38332500.5442484,
             true
            ]
@@ -8652,7 +8649,7 @@
           7.229385568020652
          ],
          "y": [
-          185699.46157632902
+          185699.46157632905
          ]
         },
         {
@@ -8660,7 +8657,7 @@
           [
            0.9875358668221432,
            1,
-           1.0468360288138279,
+           1.046836028813828,
            4851409.788081503,
            [
             0.95,
@@ -8716,9 +8713,9 @@
         {
          "customdata": [
           [
-           0.9913130378847779,
+           0.991313037884778,
            1,
-           1.0468360288138279,
+           1.046836028813828,
            4851409.788081503,
            [
             0.95,
@@ -8776,7 +8773,7 @@
           [
            0.9954650068353956,
            1,
-           1.0468360288138279,
+           1.046836028813828,
            4851409.788081503,
            [
             0.95,
@@ -8794,7 +8791,7 @@
             false
            ],
            [
-            61890.543178146996,
+            61890.54317814699,
             38332500.5442484,
             true
            ]
@@ -8834,7 +8831,7 @@
           [
            1.0012715613662104,
            1,
-           1.0468360288138279,
+           1.046836028813828,
            4851409.788081503,
            [
             0.95,
@@ -8890,9 +8887,9 @@
         {
          "customdata": [
           [
-           1.0101467721112933,
+           1.0101467721112931,
            1,
-           1.0468360288138279,
+           1.046836028813828,
            4851409.788081503,
            [
             0.95,
@@ -8910,7 +8907,7 @@
             false
            ],
            [
-            61890.543178146996,
+            61890.54317814699,
             38332500.5442484,
             true
            ]
@@ -8950,7 +8947,7 @@
           [
            1.0213305881753412,
            1,
-           1.0468360288138279,
+           1.046836028813828,
            4851409.788081503,
            [
             0.95,
@@ -8968,7 +8965,7 @@
             false
            ],
            [
-            61890.543178146996,
+            61890.54317814699,
             38332500.5442484,
             true
            ]
@@ -9000,7 +8997,7 @@
           7.639544585574141
          ],
          "y": [
-          109844.47750777415
+          109844.47750777417
          ]
         },
         {
@@ -9014,7 +9011,7 @@
          "type": "scatter",
          "x": [
           3.1927279364530605,
-          3.8381587261579675,
+          3.838158726157967,
           4.8834494477908885,
           6.447937376003817,
           7.229385568020652
@@ -9024,7 +9021,7 @@
           115610.43182704962,
           144972.62593709314,
           172133.05974534882,
-          185699.46157632902
+          185699.46157632905
          ]
         }
        ],
